--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=consilai
+# PostgreSQL connection
+spring.datasource.url=jdbc:postgresql://localhost:5432/consilai
+spring.datasource.username=postgres
+spring.datasource.password=Cordoba$20
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA / Hibernate
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+
+server.port=8081
