--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,14 +13,14 @@ spring.jpa.properties.hibernate.format_sql=true
 
 server.port=8081
 
-
+logging.level.root=INFO
 # OAuth2 Google Login
-spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
-spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
-spring.security.oauth2.client.registration.google.scope=openid,profile,email
-spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8081/login/oauth2/code/google
+#spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
+#spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
+#spring.security.oauth2.client.registration.google.scope=openid,profile,email
+#spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8081/login/oauth2/code/google
 
-spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/v2/auth
-spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
-spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
-spring.security.oauth2.client.provider.google.user-name-attribute=email
+#spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/v2/auth
+#spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
+#spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
+#spring.security.oauth2.client.provider.google.user-name-attribute=email
